# nanoblas_anfenger

./: .gitmodules  CMakeLists.txt  README.md
demos/: CMakeLists.txt  demo_lapack.cpp  demo_matrix.cpp  demo_parallel.cpp  demo_vector.cpp
docs/: intro.md
src/: inverse.hpp  lapack_interface.hpp  matexpr.hpp  matrix.hpp  vecexpr.hpp  vector.hpp
