cmake_minimum_required(VERSION 3.20)

# Set default CMAKE_BUILD_TYPE to RelWithDebInfo if not specified
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE STRING "Choose the type of build." FORCE)
endif()

project(nanoblas LANGUAGES CXX)

option(NANOBLAS_BUILD_DEMOS "Build demonstration targets" ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Dependency: pybind11 via Python
find_package(Python 3.8 COMPONENTS Interpreter Development REQUIRED)
execute_process(
    COMMAND "${Python_EXECUTABLE}" -m pybind11 --cmakedir
    OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE PYBIND11_DIR
)
list(APPEND CMAKE_PREFIX_PATH "${PYBIND11_DIR}")
find_package(pybind11 CONFIG REQUIRED)

# BLAS/LAPACK handling (Windows-specific OpenBLAS handling)
if(WIN32)
    set(OPENBLAS_URL "https://sourceforge.net/projects/openblas/files/v0.3.24/OpenBLAS-0.3.24-x64.zip/download")
    set(OPENBLAS_ZIP "${CMAKE_BINARY_DIR}/openblas.zip")
    set(OPENBLAS_MD5 "fc08fe8c0dc7364da115d0e09b5a134f")

    file(DOWNLOAD ${OPENBLAS_URL} ${OPENBLAS_ZIP} EXPECTED_MD5 ${OPENBLAS_MD5})
    file(ARCHIVE_EXTRACT INPUT ${OPENBLAS_ZIP} DESTINATION ${CMAKE_BINARY_DIR}/openblas)

    set(BLAS_LIBRARIES "${CMAKE_BINARY_DIR}/openblas/lib/libopenblas.dll.a" CACHE PATH "BLAS" FORCE)
    set(LAPACK_LIBRARIES "${CMAKE_BINARY_DIR}/openblas/lib/libopenblas.dll.a" CACHE PATH "LAPACK" FORCE)
endif()

find_package(LAPACK REQUIRED)

# Create an interface library that carries the LAPACK dependency
add_library(nanoblas INTERFACE)
target_link_libraries(nanoblas INTERFACE ${LAPACK_LIBRARIES})
target_include_directories(nanoblas INTERFACE ${LAPACK_INCLUDE_DIRS})



pybind11_add_module(nanoblas_impl src/bind_bla.cpp)
target_include_directories(nanoblas_impl PRIVATE src)
target_link_libraries(nanoblas_impl PRIVATE LAPACK::LAPACK)
target_compile_features(nanoblas_impl PRIVATE cxx_std_20)

install(TARGETS nanoblas_impl DESTINATION nanoblas)
install(FILES src/vector.hpp DESTINATION nanoblas/include)

# Demos (conditional)
if(NANOBLAS_BUILD_DEMOS)
    add_subdirectory(demos)
endif()

